--- a/strings/command.yml
+++ b/strings/command.yml
@@ -23,7 +23,7 @@ LANGUAGE_COMMAND : ["lang", "language", "langs", "اللغه"]
 # Play Commands
 PLAY_COMMAND : ["play", "vplay", "cplay", "cvplay", "playforce", "vplayforce", "cplayforce", "cvplayforce", "تشغيل", "شغل"]
 PLAYMODE_COMMAND : ["playmode"]
-CHANNELPLAY_COMMAND : ["channelplay", "تشغيل"]
+CHANNELPLAY_COMMAND : ["channelplay", "تشغيل في قناة"]
 STREAM_COMMAND : ["stream", "cstream", "streamforce", "تشغيل"]
 
 #Playlists Command
