--- a/app.json
+++ b/app.json
@@ -1,80 +1,85 @@
 {
-    "name": "Yukki Music Bot",
+    "name": "Arbawy Music Bot",
     "description": "Telegram Group Calls streaming bot with some useful features, written in Python with Pyrogram and Py-Tgcalls. Supporting platforms like Youtube, Spotify, Resso, AppleMusic, Soundcloud and M3u8 Links.",
-    "logo": "https://telegra.ph/file/c0e014ff34f34d1056627.png",
+    "logo": "https://telegra.ph/file/eeb7d3c56bbb24506639d.jpg",
     "keywords": [
     "python3",
     "telegram",
     "bot",
-    "Yukki",
-    "YukkiMusicBot",
+    "Arbawy",
+    "ArbawyMusicBot",
     "telegram-bot",
     "pyrogram"
     ],
     "stack": "container",
     "env": {
       "API_ID": {
-        "description": "Get this value from https://my.telegram.org",
+        "description": "جيبها من https://my.telegram.org",
         "value": "",
         "required": true
       },
       "API_HASH": {
-        "description": "Get this value from https://my.telegram.org",
+        "description": "جيبها من https://my.telegram.org",
         "value": "",
         "required": true
       },
       "AUTO_LEAVING_ASSISTANT": {
-        "description": "If you want your assistant to leave all chats automatically after some time.",
+        "description": "لو عاوز الحساب المساعد يخرج من الروم بعد ما يخلص سيبها زي مهيا",
         "value": "True",
         "required": false
       },
       "BOT_TOKEN": {
-        "description": "A Bot's token from Botfather",
+        "description": "توكن البوت",
         "value": "",
         "required": true
       },
       "MONGO_DB_URI": {
-        "description": "Get a mongodb url from https://cloud.mongodb.com . You can leave it blank if you want , bot will use Yukki's database for you.",
+        "description": "رابط مونجو من https://cloud.mongodb.com . ممكن تسيها فاضيه لو معندكش رابط",
         "value": "",
         "required": true
       },
       "MUSIC_BOT_NAME": {
-        "description": "A name for your Music Bot. Please don't use ascii characters",
+        "description": "اسم للبوت بس ميبقاش فيه زخرفه او حروف كبيره",
         "value": "",
         "required": true
       },
       "OWNER_ID": {
-        "description": "The user id(s) of user(s) whom you would like to add as a OWNER. Multiple values shall be seperated with a space.",
+        "description": "ايدي المطورين",
         "value": "",
         "required": true
       },
       "STRING_SESSION": {
-        "description": "A Pyrogram String Session. One Assistant is Compulsory.",
+        "description": "كود البايروجرام",
         "value": "",
         "required": true
       },
+        "STRING_SESSION2": {
+        "description": "كود البايروجرام للحساب التاني",
+        "value": "",
+        "required": false
+      },
       "HEROKU_API_KEY": {
-        "description": "Your Heroku account's API key",
+        "description": "رمز الابي اي بتاع ايميل هيروكو",
         "value": "",
         "required": false
       },
       "HEROKU_APP_NAME": {
-        "description": "Your heroku app/bot's name",
+        "description": "اسم التطبيق ",
         "value": "",
         "required": false
       },
       "LOG_GROUP_ID": {
-        "description": "Your Log Group ID, add your bot and promote as an admin with full rights!. Use only Group. Please don't use Channel ID.",
+        "description": "ايدي جروب التخزين (جروب)",
         "value": "",
         "required": true
       },
       "UPSTREAM_REPO": {
-        "description": "If you dont know this, Leave as it is",
-        "value": "https://github.com/TeamYukki/YukkiMusicBot",
+        "description": "سيبها زي ما هيا ",
+        "value": "https://github.com/alielsayed76/ArbawyMusicBot",
         "required": true
       },
       "UPSTREAM_BRANCH": {
-        "description": "Upstream Repo's Branch Name",
+        "description": "سيبها زي ما هيا ",
         "value": "master",
         "required": true
       }
